--- a/p8105_hw3_rk3445.md
+++ b/p8105_hw3_rk3445.md
@@ -24,11 +24,27 @@ library(p8105.datasets)
 data("instacart")
 ```
 
-In the `instacart` dataset, it contains 1384617 orders with 15
-description of each order including name of the product
-(`product_name`), customer identifier (`user_id`), the hour of the day
-on which the order was placed (`order_hour_of_day`), aisle identifier
-(`aisle_id`).
+The `instacart` dataset provides item-level records of customer grocery
+orders from the Instacart delivery service. This dataset contains
+1384617 observations and 15 variables (columns).
+
+Each row represents a single product within an order, the data includes
+the name of the product (`product_name`), customer identifier
+(`user_id`), the hour of the day on which the order was placed
+(`order_hour_of_day`), aisle identifier (`aisle_id`) and etc.
+
+``` r
+example_obs = instacart |> 
+  janitor::clean_names() |> 
+  select(user_id, product_name, aisle, order_hour_of_day, order_id) |> 
+  slice(1)
+```
+
+By examining a single observation record, we can illustrate how the data
+is structured at the item level: Customer `user_id` 112108 placed an
+order (`order_id` 1) at 10 o’clock (`order_hour_of_day` = 10) and
+included one instance of the product Bulgarian Yogurt from the yogurt
+aisle.
 
 ### How many aisles are there, and which aisles are the most items ordered from?
 
@@ -54,8 +70,8 @@ instacart |>
     ## 10 bread                          23635
     ## # ℹ 124 more rows
 
-There are 134 aisles and the most items are ordered from fresh
-vegetables aisles.
+The total number of unique aisles in the instacart dataset is 134 and
+the most items are ordered from fresh vegetables aisles.
 
 Make a plot that shows the number of items ordered in each aisle,
 limiting this to aisles with more than 10000 items ordered. Arrange
