--- a/p8105_hw3_rk3445.md
+++ b/p8105_hw3_rk3445.md
@@ -31,22 +31,22 @@ orders from the Instacart delivery service. This dataset contains
 Each row represents a single product within an order, the data includes
 the name of the product (`product_name`), customer identifier
 (`user_id`), the hour of the day on which the order was placed
-(`order_hour_of_day`), aisle identifier (`aisle_id`) and etc.
+(`order_hour_of_day`), aisle identifier (`aisle_id`), the recency of the
+previous order (`days_since_prior_order`), an indication whether an item
+is a `reordered` and etc.
 
-``` r
-example_obs = instacart |> 
-  janitor::clean_names() |> 
-  select(user_id, product_name, aisle, order_hour_of_day, order_id) |> 
-  slice(1)
-```
+For example, in the first row of the dataset:
 
-By examining a single observation record, we can illustrate how the data
-is structured at the item level: Customer `user_id` 112108 placed an
-order (`order_id` 1) at 10 o’clock (`order_hour_of_day` = 10) and
-included one instance of the product Bulgarian Yogurt from the yogurt
-aisle.
+- `user_id`: 112108  
+- `order_id`: 1  
+- `order_hour_of_day`: 10  
+- `product_name`: Bulgarian Yogurt  
+- `aisle`: yogurt
 
-### How many aisles are there, and which aisles are the most items ordered from?
+This shows that customer 112108 placed order 1 at 10 o’clock and
+purchased Bulgarian Yogurt from the yogurt aisle.
+
+#### How many aisles are there, and which aisles are the most items ordered from?
 
 ``` r
 instacart |> 
@@ -73,12 +73,55 @@ instacart |>
 The total number of unique aisles in the instacart dataset is 134 and
 the most items are ordered from fresh vegetables aisles.
 
-Make a plot that shows the number of items ordered in each aisle,
-limiting this to aisles with more than 10000 items ordered. Arrange
-aisles sensibly, and organize your plot so others can read it. Make a
-table showing the three most popular items in each of the aisles “baking
-ingredients”, “dog food care”, and “packaged vegetables fruits”. Include
-the number of times each item is ordered in your table. Make a table
-showing the mean hour of the day at which Pink Lady Apples and Coffee
-Ice Cream are ordered on each day of the week; format this table for
-human readers (i.e. produce a 2 x 7 table).
+#### Make a plot that shows the number of items ordered in each aisle, limiting this to aisles with more than 10000 items ordered. Arrange aisles sensibly, and organize your plot so others can read it.
+
+``` r
+instacart |> 
+  group_by(aisle) |> 
+  summarise(count = n()) |> 
+  filter(count > 10000) |> 
+  ggplot(aes(x = reorder(aisle, count), y = count)) +
+  geom_col() +
+  coord_flip() +
+  labs(
+    title = "Number of Items Ordered by Aisle (>10,000 orders)",
+    x = "Aisle",
+    y = "Number of Items Ordered"
+  ) +
+  theme_minimal()
+```
+
+![](p8105_hw3_rk3445_files/figure-gfm/unnamed-chunk-3-1.png)<!-- -->
+
+#### Make a table showing the three most popular items in each of the aisles “baking ingredients”, “dog food care”, and “packaged vegetables fruits”. Include the number of times each item is ordered in your table.
+
+``` r
+instacart |> 
+  filter(
+    aisle %in% c("baking ingredients", "dog food care", "packaged vegetables fruits")
+    ) |>
+  group_by(aisle, product_name) |> 
+  summarize(n_items = n()) |> 
+  arrange(aisle, desc(n_items)) |> 
+  slice_max(n = 3, order_by = n_items) |> 
+  knitr::kable()
+```
+
+    ## `summarise()` has grouped output by 'aisle'. You can override using the
+    ## `.groups` argument.
+
+| aisle | product_name | n_items |
+|:---|:---|---:|
+| baking ingredients | Light Brown Sugar | 499 |
+| baking ingredients | Pure Baking Soda | 387 |
+| baking ingredients | Cane Sugar | 336 |
+| dog food care | Snack Sticks Chicken & Rice Recipe Dog Treats | 30 |
+| dog food care | Organix Chicken & Brown Rice Recipe | 28 |
+| dog food care | Small Dog Biscuits | 26 |
+| packaged vegetables fruits | Organic Baby Spinach | 9784 |
+| packaged vegetables fruits | Organic Raspberries | 5546 |
+| packaged vegetables fruits | Organic Blueberries | 4966 |
+
+Make a table showing the mean hour of the day at which Pink Lady Apples
+and Coffee Ice Cream are ordered on each day of the week; format this
+table for human readers (i.e. produce a 2 x 7 table).
