--- a/p8105_hw3_rk3445.md
+++ b/p8105_hw3_rk3445.md
@@ -35,16 +35,25 @@ the name of the product (`product_name`), customer identifier
 previous order (`days_since_prior_order`), an indication whether an item
 is a `reordered` and etc.
 
+``` r
+instacart = instacart |> 
+  janitor::clean_names() |> 
+  mutate(
+    order_dow_label = lubridate::wday(order_dow, label = TRUE, abbr = FALSE)
+  )
+```
+
 For example, in the first row of the dataset:
 
 - `user_id`: 112108  
 - `order_id`: 1  
+- `order_dow` : Wednesday
 - `order_hour_of_day`: 10  
 - `product_name`: Bulgarian Yogurt  
 - `aisle`: yogurt
 
-This shows that customer 112108 placed order 1 at 10 o’clock and
-purchased Bulgarian Yogurt from the yogurt aisle.
+This shows that customer with id 112108 placed order 1 at 10 o’clock on
+Wednesday and purchased Bulgarian Yogurt from the yogurt aisle.
 
 #### How many aisles are there, and which aisles are the most items ordered from?
 
@@ -91,7 +100,7 @@ instacart |>
   theme_minimal()
 ```
 
-![](p8105_hw3_rk3445_files/figure-gfm/unnamed-chunk-3-1.png)<!-- -->
+![](p8105_hw3_rk3445_files/figure-gfm/unnamed-chunk-4-1.png)<!-- -->
 
 #### Make a table showing the three most popular items in each of the aisles “baking ingredients”, “dog food care”, and “packaged vegetables fruits”. Include the number of times each item is ordered in your table.
 
@@ -101,14 +110,11 @@ instacart |>
     aisle %in% c("baking ingredients", "dog food care", "packaged vegetables fruits")
     ) |>
   group_by(aisle, product_name) |> 
-  summarize(n_items = n()) |> 
+  summarize(n_items = n(), .groups = "drop") |> 
   arrange(aisle, desc(n_items)) |> 
-  slice_max(n = 3, order_by = n_items) |> 
+  slice_max(n = 3, order_by = n_items, by = aisle) |>
   knitr::kable()
 ```
-
-    ## `summarise()` has grouped output by 'aisle'. You can override using the
-    ## `.groups` argument.
 
 | aisle | product_name | n_items |
 |:---|:---|---:|
@@ -122,6 +128,14 @@ instacart |>
 | packaged vegetables fruits | Organic Raspberries | 5546 |
 | packaged vegetables fruits | Organic Blueberries | 4966 |
 
-Make a table showing the mean hour of the day at which Pink Lady Apples
-and Coffee Ice Cream are ordered on each day of the week; format this
-table for human readers (i.e. produce a 2 x 7 table).
+#### Make a table showing the mean hour of the day at which Pink Lady Apples and Coffee Ice Cream are ordered on each day of the week; format this table for human readers (i.e. produce a 2 x 7 table).
+
+``` r
+mean_hour = 
+instacart |> 
+  filter(product_name %in% c("Pink Lady Apples", "Coffee Ice Cream")) |> 
+  group_by(product_name) |> 
+  summarize(
+    mean_hour = mean(order_hour_of_day, na.rm = TRUE)
+  )
+```
