--- a/p8105_hw3_rk3445.md
+++ b/p8105_hw3_rk3445.md
@@ -39,7 +39,7 @@ is a `reordered` and etc.
 instacart = instacart |> 
   janitor::clean_names() |> 
   mutate(
-    order_dow_label = lubridate::wday(order_dow, label = TRUE, abbr = FALSE)
+    order_dow_label = lubridate::wday(order_dow + 1, label = TRUE, abbr = FALSE)
   )
 ```
 
@@ -47,13 +47,13 @@ For example, in the first row of the dataset:
 
 - `user_id`: 112108  
 - `order_id`: 1  
-- `order_dow` : Wednesday
+- `order_dow_label` : Thursday
 - `order_hour_of_day`: 10  
 - `product_name`: Bulgarian Yogurt  
 - `aisle`: yogurt
 
 This shows that customer with id 112108 placed order 1 at 10 o’clock on
-Wednesday and purchased Bulgarian Yogurt from the yogurt aisle.
+Thursday and purchased Bulgarian Yogurt from the yogurt aisle.
 
 #### How many aisles are there, and which aisles are the most items ordered from?
 
@@ -131,11 +131,20 @@ instacart |>
 #### Make a table showing the mean hour of the day at which Pink Lady Apples and Coffee Ice Cream are ordered on each day of the week; format this table for human readers (i.e. produce a 2 x 7 table).
 
 ``` r
-mean_hour = 
 instacart |> 
   filter(product_name %in% c("Pink Lady Apples", "Coffee Ice Cream")) |> 
-  group_by(product_name) |> 
+  group_by(product_name, order_dow_label) |> 
   summarize(
-    mean_hour = mean(order_hour_of_day, na.rm = TRUE)
-  )
+    mean_hour = mean(order_hour_of_day, na.rm = TRUE), .groups = "drop"
+  ) |> 
+  pivot_wider(
+    names_from = order_dow_label,
+    values_from = mean_hour
+  ) |> 
+  knitr::kable()
 ```
+
+| product_name | Sunday | Monday | Tuesday | Wednesday | Thursday | Friday | Saturday |
+|:---|---:|---:|---:|---:|---:|---:|---:|
+| Coffee Ice Cream | 13.77419 | 14.31579 | 15.38095 | 15.31818 | 15.21739 | 12.26316 | 13.83333 |
+| Pink Lady Apples | 13.44118 | 11.36000 | 11.70213 | 14.25000 | 11.55172 | 12.78431 | 11.93750 |
