Create a table showing the average rental price

--- a/p8105_hw3_rk3445.md
+++ b/p8105_hw3_rk3445.md
@@ -55,7 +55,8 @@ For example, in the first row of the dataset:
 This shows that customer with id 112108 placed order 1 at 10 o’clock on
 Thursday and purchased Bulgarian Yogurt from the yogurt aisle.
 
-#### How many aisles are there, and which aisles are the most items ordered from?
+**How many aisles are there, and which aisles are the most items ordered
+from?**
 
 ``` r
 instacart |> 
@@ -82,7 +83,9 @@ instacart |>
 The total number of unique aisles in the instacart dataset is 134 and
 the most items are ordered from fresh vegetables aisles.
 
-#### Make a plot that shows the number of items ordered in each aisle, limiting this to aisles with more than 10000 items ordered. Arrange aisles sensibly, and organize your plot so others can read it.
+**Make a plot that shows the number of items ordered in each aisle,
+limiting this to aisles with more than 10000 items ordered. Arrange
+aisles sensibly, and organize your plot so others can read it.**
 
 ``` r
 instacart |> 
@@ -102,7 +105,10 @@ instacart |>
 
 ![](p8105_hw3_rk3445_files/figure-gfm/unnamed-chunk-4-1.png)<!-- -->
 
-#### Make a table showing the three most popular items in each of the aisles “baking ingredients”, “dog food care”, and “packaged vegetables fruits”. Include the number of times each item is ordered in your table.
+**Make a table showing the three most popular items in each of the
+aisles “baking ingredients”, “dog food care”, and “packaged vegetables
+fruits”. Include the number of times each item is ordered in your
+table.**
 
 ``` r
 instacart |> 
@@ -128,7 +134,9 @@ instacart |>
 | packaged vegetables fruits | Organic Raspberries | 5546 |
 | packaged vegetables fruits | Organic Blueberries | 4966 |
 
-#### Make a table showing the mean hour of the day at which Pink Lady Apples and Coffee Ice Cream are ordered on each day of the week; format this table for human readers (i.e. produce a 2 x 7 table).
+**Make a table showing the mean hour of the day at which Pink Lady
+Apples and Coffee Ice Cream are ordered on each day of the week; format
+this table for human readers (i.e. produce a 2 x 7 table).**
 
 ``` r
 instacart |> 
@@ -148,3 +156,162 @@ instacart |>
 |:---|---:|---:|---:|---:|---:|---:|---:|
 | Coffee Ice Cream | 13.77419 | 14.31579 | 15.38095 | 15.31818 | 15.21739 | 12.26316 | 13.83333 |
 | Pink Lady Apples | 13.44118 | 11.36000 | 11.70213 | 14.25000 | 11.55172 | 12.78431 | 11.93750 |
+
+# Problem 2
+
+**Import, clean, and tidy Zillow datasets ** Import, clean, tidy NYC
+zipcode dataset
+
+``` r
+zipcode = 
+  read_csv("data/Zip Codes.csv") |> 
+  janitor::clean_names()
+```
+
+    ## Rows: 322 Columns: 7
+    ## ── Column specification ────────────────────────────────────────────────────────
+    ## Delimiter: ","
+    ## chr (4): County, County Code, File Date, Neighborhood
+    ## dbl (3): State FIPS, County FIPS, ZipCode
+    ## 
+    ## ℹ Use `spec()` to retrieve the full column specification for this data.
+    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+Import, clean, tidy Zillow Observed Rent Index (ZORI) in New York City
+dataset
+
+``` r
+zillow_nyc = 
+  read_csv("data/Zip_zori_uc_sfrcondomfr_sm_month_NYC.csv") |> 
+  janitor::clean_names() |>
+  rename(
+    zip_code = region_name
+  ) |> 
+  pivot_longer(
+    x2015_01_31:x2024_08_31,
+    names_to = "date",
+    values_to = "zori",
+    names_prefix = "x"
+  ) |> 
+  mutate(
+    county_name = str_remove(county_name, " County$")
+  ) 
+```
+
+    ## Rows: 149 Columns: 125
+    ## ── Column specification ────────────────────────────────────────────────────────
+    ## Delimiter: ","
+    ## chr   (6): RegionType, StateName, State, City, Metro, CountyName
+    ## dbl (119): RegionID, SizeRank, RegionName, 2015-01-31, 2015-02-28, 2015-03-3...
+    ## 
+    ## ℹ Use `spec()` to retrieve the full column specification for this data.
+    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+**There are 116 months between January 2015 and August 2024. How many
+ZIP codes are observed 116 times? How many are observed fewer than 10
+times? Why are some ZIP codes are observed rarely and others observed in
+each month?**
+
+(Question! Should I use the merged data of zipcode and zillow_nyc to
+consider the all the zipcodes instead of using only zillow dataset?)…!
+
+``` r
+zip_counts = zillow_nyc |> 
+  drop_na(zori) |> 
+  group_by(zip_code) |> 
+  summarize(
+    n_month = n()
+  ) |> 
+  filter(n_month < 10)
+```
+
+26 zipcodes are observed fewer than 10 times from January 2015 to August
+2024. These zipcodes are rarely observed likely due to limited data or
+missing/incomplete data. For example, some ZIP codes have more housing
+units tracked by Zillow, others fewer. ZIP codes with very few units or
+newly created ZIP codes may appear only rarely. Additionally, reporting
+gaps can cause a month of data for certain ZIP codes to be missing.
+
+**Create a table showing the average rental price in each borough and
+year (not month). Comment on trends in this table.**
+
+``` r
+zillow_nyc |> 
+  mutate(
+    year = str_sub(date, 1, 4) 
+  ) |> 
+  group_by(county_name, year) |> 
+  summarize(
+    avg_rental_price = mean(zori, na.rm = TRUE)
+  ) |> 
+  knitr::kable()
+```
+
+    ## `summarise()` has grouped output by 'county_name'. You can override using the
+    ## `.groups` argument.
+
+| county_name | year | avg_rental_price |
+|:------------|:-----|-----------------:|
+| Bronx       | 2015 |         1759.595 |
+| Bronx       | 2016 |         1520.194 |
+| Bronx       | 2017 |         1543.599 |
+| Bronx       | 2018 |         1639.430 |
+| Bronx       | 2019 |         1705.589 |
+| Bronx       | 2020 |         1811.443 |
+| Bronx       | 2021 |         1857.777 |
+| Bronx       | 2022 |         2054.267 |
+| Bronx       | 2023 |         2285.459 |
+| Bronx       | 2024 |         2496.896 |
+| Kings       | 2015 |         2492.928 |
+| Kings       | 2016 |         2520.357 |
+| Kings       | 2017 |         2545.828 |
+| Kings       | 2018 |         2547.291 |
+| Kings       | 2019 |         2630.504 |
+| Kings       | 2020 |         2555.051 |
+| Kings       | 2021 |         2549.890 |
+| Kings       | 2022 |         2868.199 |
+| Kings       | 2023 |         3015.184 |
+| Kings       | 2024 |         3126.803 |
+| New York    | 2015 |         3022.042 |
+| New York    | 2016 |         3038.818 |
+| New York    | 2017 |         3133.848 |
+| New York    | 2018 |         3183.703 |
+| New York    | 2019 |         3310.408 |
+| New York    | 2020 |         3106.517 |
+| New York    | 2021 |         3136.632 |
+| New York    | 2022 |         3778.375 |
+| New York    | 2023 |         3932.610 |
+| New York    | 2024 |         4078.440 |
+| Queens      | 2015 |         2214.707 |
+| Queens      | 2016 |         2271.955 |
+| Queens      | 2017 |         2263.303 |
+| Queens      | 2018 |         2291.918 |
+| Queens      | 2019 |         2387.816 |
+| Queens      | 2020 |         2315.632 |
+| Queens      | 2021 |         2210.787 |
+| Queens      | 2022 |         2406.038 |
+| Queens      | 2023 |         2561.615 |
+| Queens      | 2024 |         2694.022 |
+| Richmond    | 2015 |              NaN |
+| Richmond    | 2016 |              NaN |
+| Richmond    | 2017 |              NaN |
+| Richmond    | 2018 |              NaN |
+| Richmond    | 2019 |              NaN |
+| Richmond    | 2020 |         1977.608 |
+| Richmond    | 2021 |         2045.430 |
+| Richmond    | 2022 |         2147.436 |
+| Richmond    | 2023 |         2332.934 |
+| Richmond    | 2024 |         2536.442 |
+
+Make a plot showing NYC Rental Prices within ZIP codes for all available
+years. Your plot should facilitate comparisons across boroughs. Comment
+on any significant elements of this plot.
+
+Compute the average rental price within each ZIP code over each month in
+2023. Make a reader-friendly plot showing the distribution of
+ZIP-code-level rental prices across boroughs; put differently, your plot
+should facilitate the comparison of the distribution of average rental
+prices across boroughs. Comment on this plot.
+
+Combine the two previous plots into a single graphic, and export this to
+a results folder in your repository.
