--- a/p8105_hw3_rk3445.Rmd
+++ b/p8105_hw3_rk3445.Rmd
@@ -37,7 +37,7 @@ For example, in the first row of the dataset:
 This shows that customer with id `r instacart$user_id[1]` placed order `r instacart$order_id[1]` at `r instacart$order_hour_of_day[1]` o'clock on `r instacart$order_dow_label[1]` and purchased `r instacart$product_name[1]` from the `r instacart$aisle[1]` aisle.
 
 
-#### How many aisles are there, and which aisles are the most items ordered from?
+**How many aisles are there, and which aisles are the most items ordered from?**
 
 ```{r}
 instacart |> 
@@ -50,7 +50,7 @@ The total number of unique aisles in the instacart dataset is `r length(unique(i
 
 
 
-#### Make a plot that shows the number of items ordered in each aisle, limiting this to aisles with more than 10000 items ordered. Arrange aisles sensibly, and organize your plot so others can read it.
+**Make a plot that shows the number of items ordered in each aisle, limiting this to aisles with more than 10000 items ordered. Arrange aisles sensibly, and organize your plot so others can read it.**
 
 ```{r}
 instacart |> 
@@ -69,7 +69,7 @@ instacart |>
 
 ```
 
-#### Make a table showing the three most popular items in each of the aisles “baking ingredients”, “dog food care”, and “packaged vegetables fruits”. Include the number of times each item is ordered in your table.
+**Make a table showing the three most popular items in each of the aisles “baking ingredients”, “dog food care”, and “packaged vegetables fruits”. Include the number of times each item is ordered in your table.**
 
 ```{r}
 instacart |> 
@@ -83,7 +83,7 @@ instacart |>
   knitr::kable()
 ```
 
-#### Make a table showing the mean hour of the day at which Pink Lady Apples and Coffee Ice Cream are ordered on each day of the week; format this table for human readers (i.e. produce a 2 x 7 table).
+**Make a table showing the mean hour of the day at which Pink Lady Apples and Coffee Ice Cream are ordered on each day of the week; format this table for human readers (i.e. produce a 2 x 7 table).**
 
 ```{r}
 instacart |> 
@@ -98,5 +98,75 @@ instacart |>
   ) |> 
   knitr::kable()
 ```
+
+# Problem 2
+
+**Import, clean, and tidy Zillow datasets **
+Import, clean, tidy NYC zipcode dataset 
+
+```{r}
+zipcode = 
+  read_csv("data/Zip Codes.csv") |> 
+  janitor::clean_names()
+```
+
+Import, clean, tidy  Zillow Observed Rent Index (ZORI) in New York City dataset
+
+```{r}
+zillow_nyc = 
+  read_csv("data/Zip_zori_uc_sfrcondomfr_sm_month_NYC.csv") |> 
+  janitor::clean_names() |>
+  rename(
+    zip_code = region_name
+  ) |> 
+  pivot_longer(
+    x2015_01_31:x2024_08_31,
+    names_to = "date",
+    values_to = "zori",
+    names_prefix = "x"
+  ) |> 
+  mutate(
+    county_name = str_remove(county_name, " County$")
+  ) 
+```
+
+
+**There are 116 months between January 2015 and August 2024. How many ZIP codes are observed 116 times? How many are observed fewer than 10 times? Why are some ZIP codes are observed rarely and others observed in each month?**
+
+(Question! Should I use the merged data of zipcode and zillow_nyc to consider the all the zipcodes instead of using only zillow dataset?)...!
+
+```{r}
+zip_counts = zillow_nyc |> 
+  drop_na(zori) |> 
+  group_by(zip_code) |> 
+  summarize(
+    n_month = n()
+  ) |> 
+  filter(n_month < 10)
+```
+
+`r nrow(zip_counts)` zipcodes are observed fewer than 10 times from January 2015 to August 2024. These zipcodes are rarely observed likely due to limited data or missing/incomplete data. For example, some ZIP codes have more housing units tracked by Zillow, others fewer. ZIP codes with very few units or newly created ZIP codes may appear only rarely. Additionally, reporting gaps can cause a month of data for certain ZIP codes to be missing.
+
+
+**Create a table showing the average rental price in each borough and year (not month). Comment on trends in this table.**
+
+```{r}
+zillow_nyc |> 
+  mutate(
+    year = str_sub(date, 1, 4) 
+  ) |> 
+  group_by(county_name, year) |> 
+  summarize(
+    avg_rental_price = mean(zori, na.rm = TRUE)
+  ) |> 
+  knitr::kable()
+```
+
+
+Make a plot showing NYC Rental Prices within ZIP codes for all available years. Your plot should facilitate comparisons across boroughs. Comment on any significant elements of this plot.
+
+Compute the average rental price within each ZIP code over each month in 2023. Make a reader-friendly plot showing the distribution of ZIP-code-level rental prices across boroughs; put differently, your plot should facilitate the comparison of the distribution of average rental prices across boroughs. Comment on this plot.
+
+Combine the two previous plots into a single graphic, and export this to a results folder in your repository.
 
 
